# mim

./: .gitignore  LICENSE.txt  MANIFEST.in  README.html  README.rst  arp.py  config.py  fwreset.py  logging.yaml  logs.py  proxy.py  proxy1  requirements.in  requirements.txt  setup.cfg  setup.py  users.py  version.py
data/: injection.html
mim/: README.rst  bash.py  fileserver.py  proxyclient.py  proxyserver.py
mim/plugins/: favicon.py  logrequests.py  otherplugins.py  sslstrip.py
mim/scripts/: arp.py  proxy.py  startbeef  users.py
mim/tools/: bash.py  fileserver.py  logs.py  pydispatch2.py  tools.py
plugins/: favicon.py  logrequests.py  otherplugins.py  sslstrip.py
scripts/: .gitignore  arp  fakeap  fakeap.py  proxy.py  proxy1
tools/: fileserver.py  logs.py  pydispatch2.py  tools.py
