[metadata]
author = simon
author_email = simonm3@gmail.com
url =  'https://github.com/simonm3/mim'
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    License :: OSI Approved :: GNU General Public License (GPL)
    Operating System :: POSIX :: Linux
    Programming Language :: Python
