###### optional settings to supplement or override settings in setup.py
[metadata]
description = Man in the middle proxy server
author = simon
author_email = simonm3@gmail.com
url =  https://github.com/simonm3/mim
classifiers = Development Status :: 4 - Beta
    Environment :: Console
    Operating System :: POSIX :: Linux
    Programming Language :: Python

###### additional parameters to control setup
[setup]
# when "setup.py sdist" run then 0/1/2 increments the major/minor/micro version number
autoinc = 2
